--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Run unit tests
         run: go test ./... -cover
 
+  lints:
     name: Linting
     runs-on: ubuntu-latest
 
