--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Run unit tests
         run: go test ./... -cover
 
-  lints:
-    name: Linting
+  style:
+    name: Style
     runs-on: ubuntu-latest
 
     steps:
